Reinstating some of the deleted css to fix layout issues.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,17 +1,47 @@
+nav.navbar {
+    margin: 0;
+}
+
+.navbar-default .dropdown-menu > li button {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    white-space: nowrap;
+    text-align: left;
+    width: 100%;
+}
+
+.navbar-default .dropdown-menu > li button:hover, .dropdown-menu > li button:focus {
+    text-decoration: none;
+    color: #ffffff;
+    background-color: #dd4814;
+}
+
 .billboard {
     background: url("../img/billboard.png") no-repeat 0px -100px;;
+    background-size: cover;
     padding: 70px 20px 20px 20px;
     min-height: 400px;
     text-align: center;
 }
 
 .billboard > div > h2 {
+    text-align: center;
     color: #fff;
     background: rgba(52, 48, 45, .5);
     display: inline-block;
     font-size: 48px;
-    letter-spacing: -2px;
+    font-weight: 400;
+    line-height: 68px;
     padding: 0 15px;
+    letter-spacing: -2px;
+}
+
+.panel-body > img {
+    float: left;
+    margin: 20px 20px 10px 10px;
 }
 
 .wrapper {
